--- a/index.html
+++ b/index.html
@@ -39,27 +39,28 @@
 
         .hedgehog {
             position: fixed;
-            left: 0;
+            left: 100%;
             bottom: 0;
             width: 10%;
             height: 5vw;
             background-image: url(hedgehog.png);
             background-size: contain;
             background-repeat: no-repeat;
+            transform:scaleX(-1);
             z-index: 1;
-            animation: hedgehog 5s 10s ease infinite;
+            animation: hedgehog 15s ease-in infinite;
         }
 
 
         @keyframes hedgehog {
             0% {
 
-                left: 0
+                left: 100%;
             }
 
             100% {
 
-                left: 100%;
+                left: -100%;
 
             }
         }
@@ -84,7 +85,7 @@
             50% {
                 background-color: black;
                 background-image: url(star.png);
-                background-size: 30vh auto ;
+                background-size: 30vh ;
                 background-repeat: no-repeat;
                 
 
@@ -119,7 +120,7 @@
 
 
             50% {
-                bottom: 70%;
+                bottom: 65%;
 
             }
 
