--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeż nocą</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <style>
         body {
             background-color: lightslategray;
