add section and animation: text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noc</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,6 +17,10 @@
     <div class="forest"></div>
     <div class="hedgehog"></div>
     <div class="star"></div>
+    <section>
+        <h1>Dokąd nocą tupta jeż?</h1>
+        <h1>Możesz wiedzieć jeśli chcesz!</h1>
+    </section>
 
 
 </body>
