add animation bat and change button

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
-    <button> </button>
+    <button>Pauza</button>
     <div class="sky"></div>
     <div class="moon"></div>
     <div class="forest"></div>
     <div class="hedgehog"></div>
     <div class="star"></div>
+    <div class="bat"></div>
     <section>
         <h1>Dokąd nocą tupta jeż?</h1>
         <h1>Możesz wiedzieć jeśli chcesz!</h1>
